_cache/v0.20.2/llvm-amdgpu/specs.md
---
title: "llvm-amdgpu"
layout: cache
categories: [package, v0.20.2]
meta: {"versions": ["5.4.3"], "compilers": ["gcc@=11.1.0", "gcc@=11.4.0"], "oss": ["ubuntu20.04", "ubuntu22.04"], "platforms": ["linux"], "targets": ["x86_64_v3"], "stacks": ["e4s", "gpu-tests", "ml-linux-x86_64-rocm", "root"], "num_specs": 2, "num_specs_by_stack": {"root": 2, "e4s": 1, "gpu-tests": 1, "ml-linux-x86_64-rocm": 1}}
spec_details: [{"hash": "pp57efe6ybmp2hunhmgufcacf3qnryiq", "compiler": "gcc@=11.1.0", "versions": ["5.4.3"], "os": "ubuntu20.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1", "+rocm-device-libs"], "stacks": ["root", "e4s", "gpu-tests"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20.2/build_cache/linux-ubuntu20.04-x86_64_v3/gcc-11.1.0/llvm-amdgpu-5.4.3/linux-ubuntu20.04-x86_64_v3-gcc-11.1.0-llvm-amdgpu-5.4.3-pp57efe6ybmp2hunhmgufcacf3qnryiq.spack"}, {"hash": "ecm375gmqw4wbehxcvbvd6lwv7lab63h", "compiler": "gcc@=11.4.0", "versions": ["5.4.3"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1", "+rocm-device-libs"], "stacks": ["ml-linux-x86_64-rocm", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20.2/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.4.0/llvm-amdgpu-5.4.3/linux-ubuntu22.04-x86_64_v3-gcc-11.4.0-llvm-amdgpu-5.4.3-ecm375gmqw4wbehxcvbvd6lwv7lab63h.spack"}]
---