_cache/v0.21.0/llvm-amdgpu/specs.md
---
title: "llvm-amdgpu"
layout: cache
categories: [package, v0.21.0]
meta: {"versions": ["5.4.3", "5.6.1"], "compilers": ["gcc@=11.1.0", "gcc@=11.3.0", "gcc@=11.4.0"], "oss": ["ubuntu20.04", "ubuntu22.04"], "platforms": ["linux"], "targets": ["x86_64_v3"], "stacks": ["data-vis-sdk", "e4s", "gpu-tests", "ml-linux-x86_64-rocm", "root"], "num_specs": 6, "num_specs_by_stack": {"root": 6, "data-vis-sdk": 1, "gpu-tests": 1, "e4s": 2, "ml-linux-x86_64-rocm": 2}}
spec_details: [{"hash": "2ekvivl2xxhiggi2cyr3fk2kurasgybs", "compiler": "gcc@=11.1.0", "versions": ["5.6.1"], "os": "ubuntu20.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1,b66529f,d35aec9", "+rocm-device-libs"], "stacks": ["root", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.21.0/build_cache/linux-ubuntu20.04-x86_64_v3/gcc-11.1.0/llvm-amdgpu-5.6.1/linux-ubuntu20.04-x86_64_v3-gcc-11.1.0-llvm-amdgpu-5.6.1-2ekvivl2xxhiggi2cyr3fk2kurasgybs.spack"}, {"hash": "5rqnwvenosnrdizimgocben4ke5y7qqp", "compiler": "gcc@=11.1.0", "versions": ["5.6.1"], "os": "ubuntu20.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1,b66529f,d35aec9", "+rocm-device-libs"], "stacks": ["gpu-tests", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.21.0/build_cache/linux-ubuntu20.04-x86_64_v3/gcc-11.1.0/llvm-amdgpu-5.6.1/linux-ubuntu20.04-x86_64_v3-gcc-11.1.0-llvm-amdgpu-5.6.1-5rqnwvenosnrdizimgocben4ke5y7qqp.spack"}, {"hash": "iyl5tayfpo27i2qck4uum6r3ih3xbfrw", "compiler": "gcc@=11.4.0", "versions": ["5.6.1"], "os": "ubuntu20.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1,b66529f,d35aec9", "+rocm-device-libs"], "stacks": ["root", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.21.0/build_cache/linux-ubuntu20.04-x86_64_v3/gcc-11.4.0/llvm-amdgpu-5.6.1/linux-ubuntu20.04-x86_64_v3-gcc-11.4.0-llvm-amdgpu-5.6.1-iyl5tayfpo27i2qck4uum6r3ih3xbfrw.spack"}, {"hash": "n322tulbufp5zpifm7o2ptzohdxfu4ax", "compiler": "gcc@=11.4.0", "versions": ["5.4.3"], "os": "ubuntu20.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1", "+rocm-device-libs"], "stacks": ["root", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.21.0/build_cache/linux-ubuntu20.04-x86_64_v3/gcc-11.4.0/llvm-amdgpu-5.4.3/linux-ubuntu20.04-x86_64_v3-gcc-11.4.0-llvm-amdgpu-5.4.3-n322tulbufp5zpifm7o2ptzohdxfu4ax.spack"}, {"hash": "ng3qscpygxacrnrldfujfav75q2u3qyb", "compiler": "gcc@=11.3.0", "versions": ["5.6.1"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1,b66529f,d35aec9", "+rocm-device-libs"], "stacks": ["ml-linux-x86_64-rocm", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.21.0/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.3.0/llvm-amdgpu-5.6.1/linux-ubuntu22.04-x86_64_v3-gcc-11.3.0-llvm-amdgpu-5.6.1-ng3qscpygxacrnrldfujfav75q2u3qyb.spack"}, {"hash": "nsjhxpcvnybmriozoyouhzawhtltip3z", "compiler": "gcc@=11.3.0", "versions": ["5.6.1"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["build_system=cmake", "build_type=Release", "generator=ninja", "~ipo", "~link_llvm_dylib", "~llvm_dylib", "~openmp", "patches=a08bbe1,b66529f,d35aec9", "+rocm-device-libs"], "stacks": ["ml-linux-x86_64-rocm", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.21.0/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.3.0/llvm-amdgpu-5.6.1/linux-ubuntu22.04-x86_64_v3-gcc-11.3.0-llvm-amdgpu-5.6.1-nsjhxpcvnybmriozoyouhzawhtltip3z.spack"}]
---